--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,7 +1,3 @@
-.spacer {
-  flex: 1 1 auto
-}
-
 ul {
   list-style: none;
   padding: 0;
@@ -11,4 +7,8 @@ ul {
 a {
   text-decoration: none;
   color: white;
+}
+
+.spacer {
+  flex: 1 1 auto;
 }
